--- a/backend/.env
+++ b/backend/.env
@@ -1,5 +1,5 @@
 PORT = 4000
-MONGO_URL = "mongodb://localhost:27017/TOW"
+MONGO_URL = "mongodb+srv://kwenuebay:zs9tW5F9jxmMHebI@tow.itqz0.mongodb.net/"
 JWT_SECRET_KEY = ghfyujnvcdrtyujnbvccvb
 EMAIL_USER=kisarawenuraka956@gmail.com
 EMAIL_PASS=Kwenu@20040715
